userparameter_nginx.conf - correct comment Redis -> NGINX

--- a/nginx/userparameter_nginx.conf
+++ b/nginx/userparameter_nginx.conf
@@ -7,5 +7,5 @@
 
 # Discovery
 
-# Return Redis statistics
+# Return NGINX statistics
 UserParameter=nginx.status[*],/srv/zabbix/scripts/nginx.sh $1
