--- a/mongodb/userparameter_mongodb.conf
+++ b/mongodb/userparameter_mongodb.conf
@@ -1,4 +1,4 @@
 # Discovery
 
-# Return Redis statistics
+# Return MongoDB statistics
 UserParameter=mongodb.status[*],/srv/zabbix/libexec/mongodb_status.sh $1 $2 $3 $4 $5
